# rust-docker-isolation-provider

./: Cargo.toml  Dockerfile  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: api_handlers.rs  main.rs  parse.rs  script.rs  template.trs
template/: Cargo.toml  Cargo.ttoml  Workspace.toml  mod.mjs  mod.tmjs  package.json
template/embed/: Cargo.toml
template/embed/src/: lib.rs
template/src/: lib.trs
