[package]
name = "rust-docker-isolation-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
moka = { version = "0.11", features = ["future"] }
serde = { version = "1.0", features = ["derive"] }
regex = { version = "1.7.1", features = ["perf-literal"] }

rocket = { version = "=0.5.0-rc.3", features = ["json"] }
json = { version = "1.0", package = "serde_json", features = ["raw_value"] }

lazy_static = { version = "1.4.0" }

[profile.release]
debug = true
incremental = true
lto = "thin"

[profile.docker]
inherits = "release"
incremental = false
codegen-units = 1
strip = "symbols"
lto = "fat"
