[package]
name = "rust-docker-isolation-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
moka = { version = "0.11", features = ["future"] }
serde = { version = "1.0", features = ["derive"] }

rocket = { version = "=0.5.0-rc.3", features = ["json"] }
json = { version = "1.0", package = "serde_json", features = ["raw_value"] }
fs_extra = { version = "1.3.0" }

chrono = { version = "0.4.26" }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["ansi"], default-features = false }

# todo: patch if needs
prettyplease = { package = "prettier-please", version = "0.2.0", optional = true }
syn = { version = "2.0.27", features = ["full"], optional = true }

[features]
pretty-trace = ["prettyplease", "syn"]
default = ["pretty-trace"]

[profile.release]
debug = true
incremental = true
lto = "thin"

[profile.docker]
inherits = "release"
incremental = false
codegen-units = 1
strip = "symbols"
lto = "fat"
