[package]
name = "rust-docker-isolation-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.72" }
tokio = { version = "1", features = ["full"] }
moka = { version = "0.11", features = ["future"] }
serde = { version = "1.0", features = ["derive"] }

rocket = { version = "=0.5.0-rc.3", features = ["json"] }
json = { version = "1.0", package = "serde_json", features = ["raw_value"] }
toml = { version = "0.7.6" }
fs_extra = { version = "1.3.0" }

chrono = { version = "0.4.26" }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["ansi", "env-filter"], default-features = false }

ariadne = { version = "0.3.0" }
chumsky = { version = "1.0.0-alpha.6", features = ["label"] }

# todo: patch if needs
prettyplease = { package = "prettier-please", version = "0.2.0", optional = true }
syn = { version = "2.0.27", features = ["full"], optional = true }

[features]
default = ["pretty-trace"]
pretty-trace = ["prettyplease", "syn"]
bytes-stream = []

[profile.release]
debug = true
incremental = true
lto = "thin"

[profile.docker]
inherits = "release"
incremental = false
codegen-units = 1
strip = "symbols"
lto = "fat"
