[package]
name = "rs_lib"
version = "0.0.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.34"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.86"
js-sys = "0.3.61"

serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
__embed_js = { package = "embed",  path = "./embed" }
