[package]
name = "rs_lib"
version = "0.0.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
serde-wasm-bindgen = "0.5.0"
js-sys = "0.3.61"

wasm-bindgen-futures = { version = "0.4.37" }
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }

serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
__embed_js = { package = "embed", path = "./embed" }


[patch.crates-io]
wasm-bindgen = { git = "https://github.com/uselessgoddess/wasm-bindgen" }

[profile.release]
debug = true
